# caiofiles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aiofile.c  aiofile.cpp  aiofile.html  aiofile.pxd  aiofile.pyx  caio_test.py  errhandlingapi.pxd  fileapi.pxd  futuremap.pxd  generat_pxd.sh  ioapi.pxd  main.py  run.bat  setup.py  synchapi.pxd  test_format_msg.cpp  test_overlapped.py  test_read.py  test_write.py  winbase.pxd  winiofiles.py
include/: futuremap.h
source/: futuremap.cpp
src/: aiofile.pxd  aiofile.pyx  fileapi.pxd  io_callback.pyx  ioapi.pxd  overlapped.pxd  overlapped.pyx  winbase.pxd
src/caiofiles/: __init__.py  aiofile.pxd  aiofile.pyx  errhandlingapi.pxd  error_code.pxd  fileapi.pxd  futuremap.pxd  ioapi.pxd  overlapped.pxd  overlapped.pyx  synchapi.pxd  winbase.pxd
src/py_libuv/: __init__.py  aiofile.pxd  aiofile.pyx  exceptions.py  pyuv.pxd  pyuv.pyx  uv.pxd  uv_c.c  winix.h
test/: Controller.py  main.qml  test_format_msg.cpp  test_gui.py  test_io.py  test_libuv.py  test_read.py  test_ui.py  test_write.py
utils/: logger.py  timer.py
